changed default date to current day

--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -22,7 +22,7 @@
 
 				<label class="item item-input">
 					<span class="due-date">Due Date</span>
-					<input id="due_date" type="date" ng-model="task.due_date" placeholder="yyyy-MM-dd" style= "font-family: 'Open Sans'; color: #444; font-size:16px; padding-right:0px;"/>
+					<input id="due_date" type="date" ng-model="task.due_date" style= "font-family: 'Open Sans'; color: #444; font-size:16px; padding-right:0px;"/>
 				</label>
 
 <!-- 				<label class="item item-input">
