--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -47,7 +47,8 @@
 
 <body ng-app="starter">
   <ion-nav-bar class="bar-stable">
-    <ion-nav-back-button>
+    <ion-nav-back-button class="icon-left ion-chevron-left button-clear button-dark">
+      Back
     </ion-nav-back-button>
 
     <div class="buttons">
