archived section is now completed section

--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -86,7 +86,7 @@
 
 		<!-- Completed Tasks -->
 			<div class="item item-divider">
-				Archived
+				Completed
 <!-- 				<i class="ion-chevron-right" style="float:right;"></i>
  -->			</div>
 
