tasks in all categories show desc

--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -75,7 +75,7 @@
 
 					<!--Detail Content -->
 						<div class="detail">
-							Detail:   Info! Info! Info!
+						Detail:   {{userTask.task.description}}
 <!-- 							<div class="endorsed">
 							 <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
 							</div>          
@@ -115,7 +115,7 @@
 
 				<!--Detail Content -->
 					<div class="detail">
-								Detail:   Info! Info! Info!
+						Detail:   {{userTask.task.description}}
 	<!-- 					<div class="endorsed">
 							 <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
 						</div>       -->    
