--- a/public/templates/tasks-detail.html
+++ b/public/templates/tasks-detail.html
@@ -36,10 +36,10 @@
 		      consists of tabs, icons aligned left, within the card-footer.
 		    </p>
 		   
-		   <div class="endorsed">
+		   <div class="task-detail-endorsed">
 		      	<p>Endorsed by 22 Students</p>
 		    </div>
-		    <div class="delete">
+		    <div class="task-detail-delete">
 		    <a class="item-icon" href="#">
 		      <i class="icon ion-ios-trash"> Delete</i>
 		    </a>
