--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -46,6 +46,8 @@
 </head>
 
 <body ng-app="starter">
+  <div class="mainContainer">
+
   <ion-nav-bar class="bar-stable">
     <ion-nav-back-button class="icon-left ion-chevron-left button-clear button-dark">
       Back
@@ -58,6 +60,9 @@
       </div>
   </ion-nav-bar>
 
+
+
   <ion-nav-view></ion-nav-view>
+</div>
 </body>
 </html>
