--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -20,7 +20,7 @@
                Enrolled Classes
             </div>
 
-            <a class="item item-icon-left" href="#/tab/account/addClass">
+            <a class="item item-icon-left" href="#/app/account/addClass">
               <i class="icon ion-ios-plus-outline"></i>
                Add Class
             </a>
