--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -168,8 +168,8 @@ margin-top: -21px;
     font-size: 15px; 
 }
 
-.task-acccount-delete {
-     float: right;
+.task-detail-delete {
+    float: right;
     display: inline;
     font-size: 17px; 
 }
