links to task detail page work in this week now

--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -18,6 +18,8 @@
 
 				<!-- Task Content -->
 					<div class="tasks">
+										<a href="#/app/tasks/{{userTask.task._id}}">
+
 						<div class="task-title">
 							{{userTask.task.name}}
 						</div>
@@ -27,6 +29,7 @@
 						<div class="course-title">
 							{{userTask.task.class.name}}
 						</div>
+						</a>
 					</div>
 	
 				<!-- Drop Down Arrow -->				
