--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -13,31 +13,33 @@ body {
 
 }
 
-
+.welcome-content { 
+    margin-left: auto;
+    margin-right: auto;
+    min-width:300px;
+    max-width:400px;
+}
 
 .welcome-button-signup {
 	font-size: 25px;
 	font-family: 'Poiret One';
-/*	padding-left: 28%;
-	padding-right: 28%;*/
 	text-align: center;
 	margin-top: 10px;
-	width: 100% !important;
+/*	vertical-align: middle;*/
+	min-width:350px;
+	max-width: 500px;
 
-/*	left:12%;
-*/	vertical-align: middle;
 
 }
 .welcome-button-login {
 	font-size: 25px;
 	font-family: 'Poiret One';
-/*	padding-left: 28%;
-	padding-right: 30%;*/
 	text-align: center;
 	margin-top: 20px;
-	width: 100% !important;
-/*	left:12%;
-*/	vertical-align: middle;
+/*	vertical-align: middle;*/
+	min-width:350px;
+	max-width: 500px;
+
 
 }
 
@@ -85,3 +87,4 @@ input[type="text"], textarea {
 	font-size: 16px;
 	line-height: 25px;	
 }
+
