Added padding for account and squished the welcome

--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -44,11 +44,11 @@ body {
     font-size: 12px;
 }
 
-.action-buttons {
+/*.action-buttons {
     margin: 0 auto;
     left: 50%;
     width: 200px;
-}
+}*/
 
 .button-clear {
     font-size: 20px;
