--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -2,6 +2,7 @@
   <ion-content class="padding">
     <ion-list>
      
+     <div class="accountsummary">
        <ion-item>
         <div class="email">
            Name:<p class="user-email">{{user.name}}</p>
@@ -13,6 +14,8 @@
            Email:<p class="user-email">{{user.email}}</p>
           </div>
         </ion-item>
+      </div>
+
 
         <ion-list>
           <div class="list">
