--- a/public/templates/tab-chats.html
+++ b/public/templates/tab-chats.html
@@ -25,13 +25,15 @@
                 <div class="endorsed">
                     <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
                 </div>
-                <div class= "action-buttons">
-                    <button ng-click="accept(task)" class="button button-clear button-balanced" style="line-height: 30px;"> 
-                        Accept
-                    </button>
-                    <button ng-click="decline(task)" class="button button-clear button-assertive" style="line-height: 30px;">
-                        Decline
-                    </button>
+                <div style="margin-left: auto; margin-right: auto; text-align: center;">
+                    <div class= "action-buttons">
+                        <button ng-click="accept(task)" class="button button-clear button-balanced" style="line-height: 30px;"> 
+                            Accept
+                        </button>
+                        <button ng-click="decline(task)" class="button button-clear button-assertive" style="line-height: 30px;">
+                            Decline
+                        </button>
+                    </div>
                 </div>
             </ion-item>
         </ul>
