--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -22,6 +22,7 @@
 	</head>
 
 <body>
+	<div class="mainContainer">
 		<ion-nav-view></ion-nav-view>
 
 		<script type="text/ng-template" id="main.html">
@@ -109,6 +110,7 @@
 				</ion-content>
 			</ion-view>
 		</script>
+		</div>
 	</body>
 </html>
 	
