--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,5 +1,22 @@
 body {
 	margin: 0 auto;
+    background-image:url(/images/geometry.png); background-repeat:repeat;
+}
+
+.mainContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+
+    border-style: solid;
+    border-left: 2px solid #ddd; 
+    border-right: 2px solid #ddd; 
+
 }
 
 .welcome-title {
@@ -9,8 +26,6 @@ body {
 	text-align: center;
 	padding-top: 55px;
 	padding-bottom: 70px;
-
-
 }
 
 .welcome-content { 
@@ -88,3 +103,8 @@ input[type="text"], textarea {
 	line-height: 25px;	
 }
 
+/*input[type="text"], textarea {
+    color:#f0b840;
+}
+*/
+.cursor { font-size: 12px; background-color: red; color: red; position: relative; opacity: 0.5; }
