--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -8,20 +8,20 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/app/tasks">
+  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list positive" href="#/app/tasks">
     <ion-nav-view name="tab-tasks"></ion-nav-view>
   </ion-tab>
 
     <!-- Add Task Tab -->
-  <ion-tab title="Add Task" icon-off="ion-ios-plus-outline" icon-on="ion-ios-plus" href="#/app/add">
+  <ion-tab title="Add Task" icon-off="ion-ios-plus-outline" icon-on="ion-ios-plus positive" href="#/app/add">
     <ion-nav-view name="tab-add"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Shared" badge="badgeCount" ng-controller="ChatsCtrl" badge-style="badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world" href="#/app/chats">
+  <ion-tab title="Shared" badge="badgeCount" ng-controller="SharedCtrl" badge-style="badge-energized" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world positive" href="#/app/shared">
 
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+    <ion-nav-view name="tab-shared"></ion-nav-view>
   </ion-tab>
 
   <!-- Friends Tab -->
@@ -31,7 +31,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/app/account">
+  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person positive" href="#/app/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
