--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -23,8 +23,8 @@ body {
 /* Shared Task Page */
 
 .title {
-    font-family: 'Open Sans';
-    font-size: 17px;
+    font-family: 'Poiret One';
+    font-size: 25px !important;
 }
 
 .course {
