declining tasks works now

--- a/public/templates/tab-shared.html
+++ b/public/templates/tab-shared.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Chats">
     <ion-content>
         <ul class="list">
-            <ion-item ng-show="tasks.length == 0">
+            <ion-item ng-show="classes.length == 0">
                 Add your classes to see what's being shared :)
 <!--                 <div class="title">{{task.name}}</div>
                 <div class="course">{{task.class.name}}</div>
