--- a/public/templates/tab-shared.html
+++ b/public/templates/tab-shared.html
@@ -30,7 +30,7 @@
                 </ion-item>
 
                 <ion-item style="padding-bottom: 0px;" ng-repeat="task in tasksByClass[class.name]" id="task{{task._id}}">
-                    <div class="title">{{task.name}}</div>
+                    <div class="shared-task-title">{{task.name}}</div>
                     <div class="course">{{task.class.name}}</div>
                     <div class="date">{{task.due_date}}</div>
                     <div class="endorsed">
