--- a/public/templates/account-addClass.html
+++ b/public/templates/account-addClass.html
@@ -5,27 +5,24 @@
       <div class="list list-inset">
         <label class="item item-input">
           <i class="icon ion-search placeholder-icon"></i>
-          <input type="text" placeholder="Search">
+          <input type="text" ng-model="q" ng-change="onSearchQueryChanged(q)" placeholder="Search (e.g. COGS120)">
         </label>
       </div>
 
       <ion-list>
         <div class="search-results">
 
-        <div ng-repeat="class in classes">
+        <div ng-repeat="class in classes" id="class{{class._id}}">
           <div class="item item-icon-right">
-            <a ng-click="addClass(class)"><i class="icon ion-ios-plus-outline"></i></a>
+            <a ng-click="addClass(class)">
+            <i ng-show="!isEnrolledClass(class)" class="icon ion-ios-plus-outline"></i>
+            <i ng-show="isEnrolledClass(class)" class="icon ion-checkmark-circled"></i>
+            </a>
             {{class.name}}
-
           </div>
         </div>
-
-
         </div>
       </ion-list>
-
-
-
     </ion-list>
   </ion-content>
 </ion-view>
