--- a/public/templates/account-addClass.html
+++ b/public/templates/account-addClass.html
@@ -5,7 +5,7 @@
       <div class="list list-inset">
         <label class="item item-input">
           <i class="icon ion-search placeholder-icon"></i>
-          <input type="text" ng-model="q" ng-change="onSearchQueryChanged(q)" placeholder="Search (e.g. COGS120)">
+          <input type="text" autofocus ng-model="q" ng-change="onSearchQueryChanged(q)" placeholder="Search (e.g. COGS120)">
         </label>
       </div>
 
