--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -42,7 +42,7 @@
        </a>-->
        <!-- Log out Button -->
       <div class="LogOutButton">
-        <a href="/logout" class="button button-block button-calm">
+        <a href="/logout" class="button button-block add">
           Log Out
         </a>
       <div>
