--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -54,7 +54,7 @@
 		</div>	 
 	
 		<div ng-click="addTask(task)" class="submitButton">
-			<button class="button button-block button-calm" style="font-size:18px">
+			<button class="button button-block add" >
 			Add Task
 		</button>
 		</div>
