--- a/public/templates/tab-shared.html
+++ b/public/templates/tab-shared.html
@@ -38,10 +38,10 @@
                     </div>
                     <div style="margin-left: auto; margin-right: auto; text-align: center;">
                         <div class= "action-buttons">
-                            <button ng-click="accept(task)" class="button button-clear button-balanced" style="line-height: 30px;"> 
+                            <button ng-click="accept(task)" class="button button-clear accept" style="line-height: 30px;"> 
                                 Accept
                             </button>
-                            <button ng-click="decline(task)" class="button button-clear button-assertive" style="line-height: 30px;">
+                            <button ng-click="decline(task)" class="button button-clear decline" style="line-height: 30px;">
                                 Decline
                             </button>
                         </div>
