--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -4,22 +4,22 @@ Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-light">
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list positive" href="#/app/tasks">
+  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list light" href="#/app/tasks">
     <ion-nav-view name="tab-tasks"></ion-nav-view>
   </ion-tab>
 
     <!-- Add Task Tab -->
-  <ion-tab title="Add Task" icon-off="ion-ios-plus-outline" icon-on="ion-ios-plus positive" href="#/app/add">
+  <ion-tab title="Add Task" icon-off="ion-ios-plus-outline" icon-on="ion-ios-plus light" href="#/app/add">
     <ion-nav-view name="tab-add"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Shared" badge="badgeCount" ng-controller="SharedCtrl" badge-style="badge-energized" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world positive" href="#/app/shared">
+  <ion-tab title="Shared" badge="badgeCount" ng-controller="SharedCtrl" badge-style="badge " icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world light" href="#/app/shared">
 
     <ion-nav-view name="tab-shared"></ion-nav-view>
   </ion-tab>
@@ -31,7 +31,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person positive" href="#/app/account">
+  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person light" href="#/app/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
