--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -33,16 +33,9 @@
   <script src="js/services.js"></script>
   <script scr="js/task.js"></script>
 
+  {{> ga}}
+  {{> woompra}}
 
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-34645187-3', 'auto');
-  ga('send', 'pageview');
-  </script>
 </head>
 
 <body ng-app="starter">
