--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -42,12 +42,12 @@
   <div class="mainContainer">
 
   <ion-nav-bar class="bar topnavbar">
-    <ion-nav-back-button class="icon-left ion-chevron-left button-clear button-dark">
+    <ion-nav-back-button class="icon-left ion-chevron-left button-clear button-light">
       Back
     </ion-nav-back-button>
 
     <div class="buttons">
-      <h1 class="title topnavbar">Hive</h1>
+      <h1 class="title topnavbar">Cahoots</h1>
 <!--             <button class="button button-icon icon ion-ios-plus-outline" href="#/tab/dash">
       </button> -->
       </div>
